fixed up sizing on small monitors

--- a/css/javascript.css
+++ b/css/javascript.css
@@ -27,17 +27,17 @@
 /* main area */
 .main-content {
   position: relative;
-  background-image: url("../images/beach.jpg");
+  /* background-image: url("../images/beach.jpg"); */
   background-size: cover;
+  background-color: red;
   height: 100%;
   background-position: center;
 }
 
 /* the actual body content */
 .real-main-content {
-  top: 10%;
+  top: 5%;
   width: 40vw;
-  /* height: 50vh; */
   border-radius: 20px;
   /* drop shadow */
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
@@ -65,12 +65,13 @@
   text-decoration: none;
   color: black;
   font-size: 1.5rem;
-  padding: 10px;
+  padding: 20px;
   display: block;
   text-align: center;
   background-color: rgba(255, 255, 255, 0.9);
   border-radius: 10px;
   border: 1px solid black;
+  margin: 20px;
 }
 
 /* the text box */
